--- a/software/src/styles/styles.css
+++ b/software/src/styles/styles.css
@@ -1,11 +1,18 @@
 /*
+style for the frame of #command_output
+*/
+#console_frame{
+    border: 1px solid black;
+    margin-bottom: 1rem;
+}
+/*
 style for the command output "console"
 */
 #command_output{
-    border: 1px solid black;
     height: 20rem;
     list-style: none;
     padding-left: 5px;
+    margin-bottom: 0;
     overflow: scroll;
 }
 
