made some slight bug fixes

--- a/software/src/views/pages/frontpage.ejs
+++ b/software/src/views/pages/frontpage.ejs
@@ -76,7 +76,7 @@
                             <option value="0" selected>Choose...</option>
                             <option value="picberry">Picberry (for dsPIC/PIC)</option>
                             <option value="openocd">OpenOCD (for Cortex-M)</option>
-                            <option value="pymcuprog">Pymcuporg (for both (external ICD required))</option>
+                            <option value="pymcuprog" class="disabled" disabled>Pymcuporg (for both (external ICD required))</option>
                         </select>
                     </div>
                     <!--picberry command-->
