--- a/software/src/views/partials/head.ejs
+++ b/software/src/views/partials/head.ejs
@@ -7,3 +7,9 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/scripts/jquery-3.4.1.min.js"></script>
 <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $(".active").removeClass('active');
+        $($('a[href="' + $(location).attr("pathname") + '"]').parent()[0]).addClass("active");
+    });
+</script>
